Added documentation and fixed bugs
Fixed Bug where Companies could not be destroyed and jobs also
Fixed Bug onCascade at Companies-Jobs. Note: Paranoid tables need to add cascade with Hook
